fixed spacing, added navbar burger

--- a/src/components/Header/headerstyle.css
+++ b/src/components/Header/headerstyle.css
@@ -2,16 +2,20 @@
     transition: all 0.4s;
   }
   
-  .navbar .nav-link {
-    color: black;
-  }
+  
   
   .navbar .nav-link:hover,
   .navbar .nav-link:focus {
     color: black;
     text-decoration: none;
   }
-  
-  .navbar .navbar-brand {
-    color: black;
+
+  .nav-link {
+    color: black !important;
+    font-size: 20px;
+  }
+
+  .navbar-brand {
+    color: black !important;
+    font-size: 25px;
   }
