--- a/src/pages/aboutme/aboutme.css
+++ b/src/pages/aboutme/aboutme.css
@@ -14,3 +14,8 @@
     text-shadow: 0 0 3px black;
     color: white;
   }
+
+  .picturecontainer {
+    display: flex;
+    justify-content: center;
+  }
