--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -10,7 +10,7 @@
 
   
 .row {
-    margin-top: 325px;
+    margin-top: 225px;
   }
   
   .col-md-4 {
@@ -27,6 +27,7 @@
     display: block;
     margin: 0 auto;
     border-radius: 50%;
+    
   
   }
   
@@ -40,6 +41,7 @@
     display: block;
     margin: 0 auto;
     border-radius: 50%;
+    
   
   }
   
@@ -53,6 +55,7 @@
     display: block;
     margin: 0 auto;
     border-radius: 50%;
+    
   
   }
   
@@ -62,5 +65,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
 
   
