--- a/src/pages/portfolio/portfolio.css
+++ b/src/pages/portfolio/portfolio.css
@@ -68,8 +68,8 @@
         text-align: center;
       }
 
-      .row {
-        margin-top: 225px;
+      .port {
+        margin-top: 200px;
       }
       
       .col-md-4 {
